Fix layout issue with correct word displaying on top of message

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ h1 {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  width: 90%;
+  width: 100%;
 }
 
 .hide {
